--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -27,8 +27,16 @@
     <title>Casita's</title>
   </head>
 
-  <body>
+  <body
+  style = 
+  "background-image: url(images/bg1.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  "
+  >
     <!--Navbar class is the actual navbar, with the light(remove underline) and the size-->
+
     <nav
       class="navbar navbar-expand-lg navbar-light d-flex justify-content-between"
     >
@@ -37,7 +45,7 @@
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 60px"
+          style="max-height: 60px"  
         />
       </a>
 
@@ -72,6 +80,43 @@
       </div>
       <!--UP TO HERE-->
     </nav>
+
+    <div class="container-fluid mb-3">
+      <div class = "row p-4">
+        <div class = "col">
+            <h1 class = "text-center text-white" style = "text-shadow: 2px 2px 4px rgba(0,0,0,0.5);"> Casita's</h1>
+         
+        </div>
+      </div>
+</div>
+      
+      <div class = "container-fluid">
+        <div class = "row mt-5 p-3" style = "background-color: #cc0000;">
+
+            <div class = "col-sm-4">
+              <img src = "images/nachoCharac.png" class = "img-fluid" alt = "nacho character"> </img>
+            </div>
+
+            <div class = "col-sm-4 mt-5 p-5 text-center align-items-center">
+              <h3 class = "text-white"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h3>
+            </div>
+
+            <!-- PUT IT HERE -->
+            <div class = "col-sm-4">
+              <div class = "card">
+                <img src = "images/Photo-02.jpg" alt = "photo-2"></img>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
