--- a/casita-s/templates/contactUs.html
+++ b/casita-s/templates/contactUs.html
@@ -1,240 +1,353 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-  <title>Casita's</title>
-  <style>
-    body {
-      background-image: url('images/casitas.jpg'); /* Replace with the path to your image */
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-      background-color: #252827;
-      color: white;
-      font-family: Arial, sans-serif;
-      padding-top: 80px; /* Adjust if needed */
-    }
-  
-    .navbar {
-      background-color: rgba(76, 69, 69, 0.384); /* Semi-transparent background by default */
-      transition: background-color 0.3s ease;
-    }
-  
-    .navbar .nav-link {
-      color: #ffffff; /* Ensure nav links are visible */
-    }
-  
-    .navbar .nav-link:hover {
-      color: #ffffff; /* Highlight color on hover */
-    }
-    .navbar .nav-link.about {
-      color: #000000; /* Specific color for About Us */
-    }
-
-    .navbar .nav-link.menu {
-      color: #000000; /* Specific color for Menu */
-    }
-
-    .navbar .nav-link.contact {
-      color: #32CD32; /* Specific color for Contact Us */
-    }
-  
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     
 
-    .card {
-      background-color: #1E1E1E;
-      border: none;
-      border-radius: 15px;
-    }
-  
-    h2, h4, h5 {
-      color: #FFD700;
-    }
-  
-    .contact-info i {
-      color: #E17A09;
-    }
-  
-    .contact-info h5 {
-      color: white;
-    }
-  
-    .fiesta-border {
-      background: linear-gradient(#FFD700);
-      padding: 10px;
-      border-radius: 15px;
-    }
-  
-    .text-highlight {
-      color: #FFD700;
-    }
-  
-    .form-control {
-      background-color: #333;
-      color: white;
-      border: 1px solid #FFD700;
-    }
-  
-    .form-control::placeholder {
-      color: #b3b3b3;
-    }
-  
-    .btn-primary {
-      background-color: #FF7043;
-      border-color: #FF7043;
-    }
-  
-    .btn-primary:hover {
-      background-color: #e85a28;
-      border-color: #e85a28;
-    }
+    <title>Casita's</title>
+    <style>
+      body {
+        background-image: url("images/casitas.jpg"); /* Replace with the path to your image */
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-color: #252827;
+        color: white;
+        font-family: Arial, sans-serif;
+        padding-top: 80px; /* Adjust if needed */
+      }
 
-    .footer{
+      .navbar {
+        background-color: rgba(
+          76,
+          69,
+          69,
+          0.384
+        ); /* Semi-transparent background by default */
+        transition: background-color 0.3s ease;
+        font-weight: 900;
+        text-shadow: 0.3px 0.3px 0 #000, -0.3px -0.3px 0 #000, 0.3px -0.3px 0 #000, -0.3px 0.3px 0 #000;
+      }
+
+      .navbar .nav-link {
+        color: #ffffff; /* Ensure nav links are visible */
+      }
+
+      .navbar .nav-link.about {
+        color: white;
+      }
+
+      .navbar .nav-link.menu {
+        color: white;
+      }
+
+      .navbar .nav-link.contact {
+        color: white;
+      }
+
+      .navbar .nav-link.about:hover,
+      .navbar .nav-link.menu:hover {
+        color: gold !important;
+      }
+
+      .card {
+        background-color: #1e1e1e;
+        border: none;
+        border-radius: 15px;
+      }
+
+      h2,
+      h4,
+      h5 {
+        color: #ffd700;
+      }
+
+      .contact-info i {
+        color: #e17a09;
+      }
+
+      .contact-info h5 {
+        color: white;
+      }
+
+      .fiesta-border {
+        background: linear-gradient(#ffd700);
+        padding: 10px;
+        border-radius: 15px;
+      }
+
+      .text-highlight {
+        color: #ffd700;
+      }
+
+      .form-control {
+        background-color: #333;
+        color: white;
+        border: 1px solid #ffd700;
+      }
+
+      .form-control::placeholder {
+        color: #b3b3b3;
+      }
+
+      .btn-primary {
+        background-color: #ff7043;
+        border-color: #ff7043;
+      }
+
+      .btn-primary:hover {
+        background-color: #e85a28;
+        border-color: #e85a28;
+      }
+
+      .footer {
         background-color: rgba(76, 69, 69, 0.384);
-    }
-  </style>
-  
-</head>
+      }
 
-<body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <a class="navbar-brand" href="/">
-      <img src="images/logo.png" alt="casita's logo" class="img-fluid" style="max-height: 80px;">
-    </a>
-  
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarNav" style="margin-right: 5%;">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link about" href="/about">About us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link menu" href="/menu">Menu</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link contact" href="/contact">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
+      .nav-item.active .nav-link {
+        color: gold !important;
+      }
+    </style>
+  </head>
 
-  <!-- Contact Information -->
-  <div class="container mt-5 container-custom">
-    <div class="row">
-      <div class="col-xl-6">
-        <div class="card p-4 h-100">
-          <h2 class="text-highlight">Where to find us</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1925.701315896727!2d120.5807317444275!3d15.136217000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f3624e51be97%3A0x4ec0c21a41fb8107!2sCasita&#39;s%20Birria%20Kitchen!5e0!3m2!1sen!2sph!4v1722865920405!5m2!1sen!2sph"
-            class="rounded-1 w-100 h-100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand" href="/">
+        <img
+          src="images/logo.png"
+          alt="casita's logo"
+          class="img-fluid"
+          style="max-height: 80px"
+        />
+      </a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div
+        class="collapse navbar-collapse"
+        id="navbarNav"
+        style="margin-right: 5%"
+      >
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link about" href="/about">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link menu" href="/menu">Menu</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link contact" href="/contact">Contact Us</a>
+          </li>
+        </ul>
       </div>
+    </nav>
 
-      <!-- Additional Contact Info -->
-      <div class="col-xl-6">
-        <div class="card p-4 h-100 fiesta-border">
-          <h2 class="text-center border-bottom">More information about Casita's</h2>
-
-          <div class="contact-info mt-4">
-            <h4>Where can you find us?</h4>
+    <!-- Contact Information -->
+    <div class="container mt-5 container-custom">
+      <div class="row">
+        <div class="col-xl-6 mb-2">
+          <div class="card p-4 h-100">
+            <h2 class="text-highlight">Where to find us</h2>
             <h5>NEPO CENTER 2009 ANGELES CITY, PHILIPPINES</h5>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1925.701315896727!2d120.5807317444275!3d15.136217000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f3624e51be97%3A0x4ec0c21a41fb8107!2sCasita&#39;s%20Birria%20Kitchen!5e0!3m2!1sen!2sph!4v1722865920405!5m2!1sen!2sph"
+              class="rounded-1 w-100 h-100"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
 
-            <h4 class="mt-3">For pickup and delivery</h4>
-            <div class="d-flex align-items-center mb-3">
-              <a class="nav-link" href="https://www.foodpanda.ph/restaurant/wvfx/casitas-birria-kitchen">
-                <span class="d-flex align-items-center">
-                  <i class="fas fa-truck fa-2x mr-2"></i>
-                  <h5 class="mb-0">Food Panda</h5>
-                </span>
-              </a>
-            </div>
+        <!-- Additional Contact Info -->
+        <div class="col-xl-6 mb-2">
+          <div class="card p-4 h-100 fiesta-border">
+            <h2 class="text-center border-bottom">
+              More information about Casita's
+            </h2>
 
-            <div class="d-flex align-items-center mb-3">
-              <a class="nav-link" href="https://www.facebook.com/casitasbirriakitchen">
-                <span class="d-flex align-items-center" style="color: #e17a09">
-                  <i class="fab fa-facebook fa-2x mr-2"></i>
-                  <h5 class="mb-0">Facebook</h5>
-                </span>
-              </a>
-            </div>
+            <div class="contact-info mt-4">
+              <h4>For Pickup and Delivery</h4>
+              <div class="d-flex align-items-center mb-3">
+                <a
+                  class="nav-link"
+                  href="https://www.foodpanda.ph/restaurant/wvfx/casitas-birria-kitchen"
+                >
+                  <span class="d-flex align-items-center">
+                    <i class="fas fa-truck fa-2x mr-2"></i>
+                    <h5 class="mb-0">Food Panda</h5>
+                  </span>
+                </a>
+              </div>
 
-            <div class="d-flex align-items-center mb-3">
-              <span style="color: #e17a09; text-decoration: none;">
-                <span class="d-flex align-items-center nav-link">
-                  <i class="fas fa-phone fa-2x mr-2"></i>
-                  <h5 class="mb-0">0962-900-3752</h5>
+              <div class="d-flex align-items-center mb-3">
+                <span style="color: #e17a09; text-decoration: none">
+                  <span class="d-flex align-items-center nav-link">
+                    <i class="fas fa-phone fa-2x mr-2"></i>
+                    <h5 class="mb-0">0962-900-3752</h5>
+                  </span>
                 </span>
-              </span>
+              </div>
+
+              <h4 class="contact-info mt-4">Connect with Us</h4>
+              <div class="d-flex align-items-center mb-3">
+                <a
+                  class="nav-link"
+                  href="https://www.facebook.com/casitasbirriakitchen"
+                >
+                  <span
+                    class="d-flex align-items-center"
+                    style="color: #e17a09"
+                  >
+                    <i class="fab fa-facebook fa-2x mr-2"></i>
+                    <h5 class="mb-0">Facebook</h5>
+                  </span>
+                </a>
+              </div>
+
+              <div class="d-flex align-items-center mb-3">
+                <a
+                  class="nav-link"
+                  href="https://www.instagram.com/casitasbirriakitchen"
+                >
+                  <span
+                    class="d-flex align-items-center"
+                    style="color: #e17a09"
+                  >
+                    <i class="fab fa-instagram fa-2x mr-2"></i>
+                    <h5 class="mb-0">Instagram</h5>
+                  </span>
+                </a>
+              </div>
+
+              <div class="d-flex align-items-center mb-3">
+                <a class="nav-link" href="m.me/casitasbirriakitchen">
+                  <span
+                    class="d-flex align-items-center"
+                    style="color: #e17a09"
+                  >
+                    <i class="fab fa-facebook-messenger fa-2x mr-2"></i>
+                    <h5 class="mb-0">Messenger</h5>
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Contact Form -->
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-xl-12">
-        <div class="card p-4 h-100">
-          <div id="success-alert"></div>
-          <form action="/" method="POST">
-            <div class="form-group">
-              <h1>Contact Us</h1>
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email" />
-            </div>
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" />
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea type="text" class="form-control" id="message" name="message" placeholder="Message..." rows="5"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+    <!-- Contact Form -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="card p-4 h-100">
+            <div id="success-alert"></div>
+            <form action="/" method="POST">
+              <div class="form-group">
+                <h1>Contact Us</h1>
+                <label for="email">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  name="email"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="subject">Subject</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="subject"
+                  name="subject"
+                  placeholder="Subject"
+                />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea
+                  type="text"
+                  class="form-control"
+                  id="message"
+                  name="message"
+                  placeholder="Message..."
+                  rows="5"
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <footer class="footer text-center">
-    <div class="container">
-      <p class="mb-0">© 2024 Casita's. All rights reserved.</p>
-    </div>
-  </footer>
+    <footer class="footer text-center">
+      <div class="container">
+        <p class="mb-0">© 2024 Casita's. All rights reserved.</p>
+      </div>
+    </footer>
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const successParams = urlParams.get("success");
-    const successAlert = document.getElementById("success-alert")
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const successParams = urlParams.get("success");
+      const successAlert = document.getElementById("success-alert");
 
-    if (successParams == "true") {
-      successAlert.classList.add("alert", "alert-success")
-      successAlert.innerText = "Your message has been sent successfully!"
-    } else if (successParams == "false") {
-      successAlert.classList.add("alert", "alert-danger");
-      successAlert.innerText = "Unable to send your message. Please ensure all required fields are completed and try again.";
-    }
-  </script>
+      if (successParams == "true") {
+        successAlert.classList.add("alert", "alert-success");
+        successAlert.innerText = "Your message has been sent successfully!";
+      } else if (successParams == "false") {
+        successAlert.classList.add("alert", "alert-danger");
+        successAlert.innerText =
+          "Unable to send your message. Please ensure all required fields are completed and try again.";
+      }
+    </script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLa9m5c5KpJyyjHCGA8W3YpP1V+2ErWwhi5Z" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+rCyaUsT5yK7fHAV0pacs//ix+n/tmtE3MoK7ZeZDyxN6EG+0" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
