--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -147,15 +147,19 @@
             </div>
 
             <div class = "col-sm-4 mt-5 p-5 text-center align-items-center">
-              <h2 class = "text-white" style="font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h2>
+              <h2 class = "text-white" style=" font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h2>
             </div>
 
             <!-- PUT IT HERE -->
-              <div class="img-fluid" style="width: 26rem; height: 23rem; object-fit: scale-down; margin-top: 2rem; margin-left: 2rem;">
+              <!-- <div class="img-fluid" style="width: 26rem; height: 23rem; object-fit: scale-down; margin-top: 2rem; margin-left: 2rem;">
                   <img src = "images/food3.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: 8rem; left: 5rem" alt = "food-3"></img>
                   <img src = "images/food2.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: -15rem;" talt = "food-2"></img>
                   <img src = "images/food1.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 10rem; width: auto; position: relative; top: -15rem; left: 0.85rem;" alt = "food-1"></img>
-                </div>
+                </div> -->
+
+                <div class="col-sm-4" style="margin-top: 2rem;">
+                  <img src="images/food4.png" class="img-fluid" alt="food" style="max-height: 40rem;">
+              </div>
           </div>
 
         </div>
