--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -32,6 +32,8 @@
     <title>Casita's</title>
   </head>
  <style>
+
+      
       .image-container {
       position: relative;
       width: 100%; /* Set maximum width of the container */
@@ -45,21 +47,42 @@
       height: auto; /* Maintain aspect ratio */
     }
 
-      .nav-link {
-        margin: 0rem 0.2rem;
-        background-color: #ffc100;
-        border-radius: .5rem;
-      }
+    nav{
+      z-index: 1;
+    }
 
-      .nav-link :hover {  
-        color: black !important;
-        text-decoration: underline !important;
+      .nav-link {
+        margin: 0.2rem 0.2rem;
+        background-color: rgba(255, 193, 0, 0.8);
+        border-radius: .5rem;
+        text-align: center;
+        width: 7rem;
       }
 
       .navbar-toggler {
-        background-color: #ffc100;
+        top: -2rem;
+        background-color: rgba(255, 193, 0, 0.8);
         border-radius: .5rem;
+        position: relative;
+        z-index: 1001; /* Ensure the button stays on top */
       }
+
+      .background-pic{
+        position: relative;
+        top: 0;
+      }
+
+      .navbar-collapse {
+  position: absolute;
+  top: 50%;
+  right: 1%;
+  z-index: 1000; /* Ensure it appears above other content */
+}
+
+.navbar-collapse.show {
+  display: block;
+  height: auto; /* Allow the content to expand naturally */
+}
 
       body {
         font-family: "DM Sans", sans-serif;
@@ -114,7 +137,7 @@
       </div>
       <!--UP TO HERE-->
     </nav>
-  <img src="images/bg2.jpg" alt="Background Image" />
+  <img class="background-pic" src="images/bg2.jpg" alt="Background Image" />
 </div>
       <div class = "container-fluid">
         <div class = "row mt-5 p-3" style = "background-color: #c0000b;">
@@ -124,15 +147,19 @@
             </div>
 
             <div class = "col-sm-4 mt-5 p-5 text-center align-items-center">
-              <h2 class = "text-white" style="font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h2>
+              <h2 class = "text-white" style=" font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h2>
             </div>
 
             <!-- PUT IT HERE -->
-              <div class="img-fluid" style="width: 26rem; height: 23rem; object-fit: scale-down; margin-top: 2rem; margin-left: 2rem;">
+              <!-- <div class="img-fluid" style="width: 26rem; height: 23rem; object-fit: scale-down; margin-top: 2rem; margin-left: 2rem;">
                   <img src = "images/food3.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: 8rem; left: 5rem" alt = "food-3"></img>
                   <img src = "images/food2.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: -15rem;" talt = "food-2"></img>
                   <img src = "images/food1.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 10rem; width: auto; position: relative; top: -15rem; left: 0.85rem;" alt = "food-1"></img>
-                </div>
+                </div> -->
+
+                <div class="col-sm-4" style="margin-top: 2rem;">
+                  <img src="images/food4.png" class="img-fluid" alt="food" style="max-height: 40rem;">
+              </div>
           </div>
 
         </div>
