white bar gone sa right

--- a/casita-s/templates/about.html
+++ b/casita-s/templates/about.html
@@ -533,11 +533,13 @@
       box-shadow: 0 0 0 8px #fff, 30px 31px 5px 0px rgba(0, 0, 0, 0.75);
     }
     @media (max-width: 767px) {
-      .front-pic{
-        width: 80%;
-        height: auto;
+      .front-pic-container {
+        width: 70%;
+        left: 20%;
+        height: 80%;
       }
     }
+    
     .overlay-img-front-pic {
       position: absolute;
       top: 3%; /* Center the overlay image vertically */
