--- a/casita-s/templates/about.html
+++ b/casita-s/templates/about.html
@@ -28,6 +28,9 @@
   </head>
 
   <style>
+    body{
+      overflow-x: hidden;
+    }
     @keyframes appear-left {
       from{
         opacity: 0;
